[package]
name = "ellie"
version = "0.1.0"
edition = "2021"
license = "MIT"

authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>"]
description = "Urban broccoli"
repository = "https://github.com/schneiderfelipe/ellie"
documentation = "https://docs.rs/ellie"
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = { default-features = false, version = "0.14.0" }
color-eyre = { version = "0.6.2", features = ["issue-url"] }
futures = { version = "0.3.28" , default-features = false }
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde_json = { version = "1.0.105", default-features = false }
tiktoken-rs = { version = "0.5.3", features = ["async-openai"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "io-std"], default-features = false }
