[package]
name = "ellie"
version = "0.1.0"
edition = "2021"
license = "MIT"

authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>"]
description = "echo \"It's dangerous to go alone\" | ellie"
repository = "https://github.com/schneiderfelipe/ellie"
# documentation = "https://docs.rs/ellie"
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = { default-features = false, version = "0.14.0" }
color-eyre = { version = "0.6.2", default-features = false }
dialoguer = { default-features = false, version = "0.11.0" }
directories = "5.0.1"
duct = "0.13.6"
either = { default-features = false, version = "1.9.0" }
futures = { version = "0.3.28" , default-features = false }
itertools = "0.11.0"
json-patch = { default-features = false, version = "1.0.0" }
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.188", default-features = false }
serde_json = { version = "1.0.105", default-features = false }
shellexpand = "3.1.0"
tiktoken-rs = { version = "0.5.3", features = ["async-openai"] }
tokio = { version = "1.32.0", features = ["io-std", "rt-multi-thread"], default-features = false }
toml = { features = ["parse"], default-features = false, version = "0.7.6" }
